corpus/pypdf/2.12.1/index.md
.. PyPDF2 documentation main file, created by
   sphinx-quickstart on Thu Apr  7 20:13:19 2022.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

Welcome to PyPDF2
=================

PyPDF2 is a `free <https://en.wikipedia.org/wiki/Free_software>`_ and open
source pure-python PDF library capable of splitting,
merging, cropping, and transforming the pages of PDF files. It can also add
custom data, viewing options, and passwords to PDF files.
PyPDF2 can retrieve text and metadata from PDFs as well.

You can contribute to `PyPDF2 on GitHub <https://github.com/py-pdf/PyPDF2>`_.

   user/installation
   user/migration-1-to-2
   user/robustness
   user/suppress-warnings
   user/metadata
   user/extract-text
   user/extract-images
   user/encryption-decryption
   user/merging-pdfs
   user/cropping-and-transforming
   user/add-watermark
   user/reading-pdf-annotations
   user/adding-pdf-annotations
   user/forms
   user/streaming-data
   user/file-size
   user/pdf-version-support

   modules/PdfReader
   modules/PdfWriter
   modules/PdfMerger
   modules/PageObject
   modules/Transformation
   modules/DocumentInformation
   modules/XmpInformation
   modules/Destination
   modules/RectangleObject
   modules/Field
   modules/PageRange
   modules/AnnotationBuilder
   modules/PaperSize

   dev/intro
   dev/pdf-format
   dev/cmaps
   dev/deprecations
   dev/testing

   meta/CHANGELOG
   meta/changelog-v1
   meta/project-governance
   meta/history
   meta/CONTRIBUTORS
   meta/comparisons
   meta/faq

Indices and tables
==================

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
